# NsCDE

./: .gitignore  AGENTS.md  ChangeLog  INSTALL  INSTALL.md  INSTALLATION_GUIDE.md  Installer.ksh  Makefile  Makefile.am  Makefile.in  PACKAGING_REPORT.md  README.localization  README.md  README.zh.md  ReleaseNotes.txt  TODO  TODO-EVALUATION.md  WAYLAND_LABWC_PORT_PLAN.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac
data/: Makefile  Makefile.am  Makefile.in
data/backdrops/: ArtDeco.pm  BellFlowers.pm  Binding.pm  Burl.pm  CoffeeLeaves.pm  Crochet.pm  Cubes.pm  CurtainDark.pm  Facade.pm  Foreground.pm  FvwmBg2.pm  Iris.pm  Ironworks.pm  Lace.pm  LatticeBig.pm  Leather.pm  Leaves.pm  Marble.pm  Maze.pm  OrientDk.pm  Paver.pm  Rain.pm  RakedSand.pm  Slats.pm  Squares.pm  Stix.pm  Stream.pm  Structure.pm  Tartan.pm  Thorns.pm  Wrought.pm
data/config_templates/: Dunst.conf.in  Makefile  Makefile.am  Makefile.in  Picom.conf  Stalonetray.conf  Xdefaults  Xdefaults.fontdefs  Xdefaults.mouse  Xset.conf  Xsettingsd.conf  colormgr.addons  colormgr.local  colormgr.local.in  dot_xscreensaver.in  fontmgr.local  fontmgr.local.in  rofi_config
data/defaults/: FrontPanel.actions  Keymenu-cua.actions  Keymenu-nscde1x.actions  Keymenu.actions  Subpanels.actions  WSM.conf
data/examples/: README.Gkrellm
data/fontsets/: DejaVuSerif.fontset  Fancy.fontset  Fira.fontset  FreeSerif.fontset  LuxiSans.fontset  Monteserrat.fontset  Roboto.fontset  TexGyrePagella.fontset  Ubuntu.fontset
data/fvwm/: Animate.fvwmconf  Event.fvwmconf  Font-96dpi.fvwmconf  FrontPanel.fvwm2  FrontPanel.fvwm2.fvwmconf  FrontPanel.fvwm3  FrontPanel.fvwm3.fvwmconf  FrontPanel.fvwmconf  Functions.fvwmconf  Functions.fvwmconf.in  Init.fvwmconf  Keybindings.cua  Keybindings.fvwmconf  Keybindings.nscde  Keybindings.nscde1x  LocalPager.fvwmconf  Main.fvwmconf  Main.fvwmconf.in  Makefile  Makefile.am  Makefile.in  Menus.fvwmconf  Mousebindings.fvwmconf  NsCDE.conf  Sandbox.fvwmconf  Style.fvwmconf  Subpanels.fvwmconf
data/help/: fp_help.catalog
data/palettes/: Autumn.dp  BlueShades.dp  Camouflage.dp  Desert.dp  Grass.dp  Kamari.dp  Lilac.dp  Olive.dp  Zutto.dp
doc/: Makefile  Makefile.am  Makefile.in
doc/docbook/: Makefile  Makefile.am  Makefile.in  NsCDE.css  NsCDE.txt  NsCDE.xml  NsCDE.xsl
doc/examples/: README.colormgr.local  README.session-integrations
docbook/: Makefile.am  Makefile.in  NsCDE.txt  NsCDE.xml  NsCDE.xsl
docbook/html/: AppMenus_conf.html  Backer_fvwmconf.html  Form_fvwmconf.html  FrontPanel_fvwmconf.html  Keybindings_fvwmconf.html  Keymenu_actions.html  LocalPager_fvwmconf.html  Mousebindings_fvwmconf.html  NsCDE-Additional-Software.html  NsCDE-Animate_fvwmconf.html  NsCDE-BackdropMgr.html  NsCDE-Backdrops-Palettes-Fonts.html  NsCDE-CheckMailApplet.html  NsCDE-FpLite.html  NsCDE-GWM.html  NsCDE-InputForm.html  NsCDE-Installation.html  NsCDE-Integration-Custom.html  NsCDE-Integrations.html  NsCDE-Missing-Parts.html  NsCDE-PGM.html  NsCDE-Startup.html  NsCDE-Subpanels.html  NsCDE-System-User-Tree-Layout.html  NsCDE-User-Tree-Layout.html  NsCDE-WSM_conf.html  NsCDE-Workspace-Manager.html  Subpanels_fvwmconf.html  WspLocPager_fvwmconf.html  index.html
lib/: Makefile  Makefile.am  Makefile.in
lib/fvwm-modules/: FvwmScript  FvwmScript.in  Makefile  Makefile.am  Makefile.in
lib/python/: Globals.py.in  Makefile  Makefile.am  Makefile.in  MiscFun.py  MiscFun.py.in  MotifColors.py  MotifColors.py.in  Opts.py  Opts.py.in  Theme.py  Theme.py.in  ThemeGtk.py  ThemeGtk.py.in
lib/scripts/: ActionForm  BackdropMgr  BackdropMgr.in  BeepMgr  CheckMailApplet  ChoiceForm  ColorIntegrationDialog  ColorMgr  ColorMgr.in  DefaultAppsMgr.in  ExecDialog  ExecDialog.in  FilePicker  FontIntegrationDialog  FontMgr  FontMgr.in  FpIconMgr  FpLite  GWMOptions  GeometryMgr  InputForm  KeyboardMgr  KeyboardMgr.in  Makefile  Makefile.am  Makefile.in  ModifyColor  MonthDayApplet  NColorsDialog  NProcMgr  Occupy  PaletteDialog  PointerMgr  PointerMgr.in  PowerSaveMgr  PowerSaveMgr.in  StyleMgr  SubpanelMgr  SubpanelSettings  SubpanelSettings.in  (+12 more)
nscde_tools/: Makefile  Makefile.am  Makefile.in  acpimgr  acpimgr.in  appfinder  appfinder.in  backdropmgr  backdropmgr.in  bootstrap  bootstrap.in  chtheme.in  colorconv  colorconv.in  colormgr  colormgr.in  colorpicker  colorpicker.in  confget  confget.in  confset  confset.in  fontmgr  fontmgr.in  fp_manage_subpanel  fp_manage_subpanel.in  fpclock  fpclock.in  fpdoc.in  fpexec  fpexec.in  fpseticon  fpseticon.in  generate_app_menus  generate_app_menus.in  generate_subpanels  generate_subpanels.in  get_fvwm_infostore.in  get_logical_screens  get_logical_screens.in  (+38 more)
nscde_tools/FvwmScripts/: GWM  GWM.in  Makefile  Makefile.am  Makefile.in  Notifier  Notifier.in  Splash  Splash.in
nscde_tools/NsCDE/: appfinder  backdropmgr  bootstrap  colorpicker  confset  fpexec  fpseticon  generate_app_menus  generate_subpanels  getdpi  keymenu  palette_colorgen  subpanel_menuitem_props  usleep
po/: Makefile  Makefile.am  Makefile.in  NsCDE-BackdropMgr.zh_CN.po  NsCDE-BeepMgr.hr.mo  NsCDE-BeepMgr.zh_CN.po  NsCDE-ColorMgr.hr.mo  NsCDE-ColorMgr.hr.po  NsCDE-ColorMgr.zh_CN.po  NsCDE-DefaultAppsMgr.zh.po  NsCDE-ExecDialog.hr.po  NsCDE-ExecDialog.zh_CN.po  NsCDE-FilePicker.zh_CN.po  NsCDE-FontMgr.hr.mo  NsCDE-FontMgr.hr.po  NsCDE-FontMgr.zh_CN.po  NsCDE-FpIconMgr.hr.po  NsCDE-FpIconMgr.zh_CN.po  NsCDE-GWM.hr.mo  NsCDE-GWM.hr.po  NsCDE-GWM.zh_CN.po  NsCDE-GeometryMgr.hr.mo  NsCDE-GeometryMgr.hr.po  NsCDE-GeometryMgr.zh_CN.po  NsCDE-KeyboardMgr.hr.mo  NsCDE-KeyboardMgr.hr.po  NsCDE-KeyboardMgr.zh_CN.po  NsCDE-NProcMgr.hr.po  NsCDE-NProcMgr.zh_CN.po  NsCDE-Occupy.hr.mo  NsCDE-Occupy.hr.po  NsCDE-Occupy.zh_CN.po  NsCDE-PointerMgr.hr.mo  NsCDE-PointerMgr.zh_CN.po  NsCDE-PowerSaveMgr.zh_CN.po  NsCDE-StyleMgr.hr.mo  NsCDE-StyleMgr.hr.po  NsCDE-StyleMgr.zh_CN.po  NsCDE-Subpanel.hr.po  NsCDE-Subpanel.zh_CN.po  (+23 more)
src/XOverrideFontCursor/: Makefile  Makefile.am  Makefile.in  XOverrideFontCursor.c  XOverrideFontCursor.so.DragonFly_x86_64  _Makefile  (+6 more)
xdg/: Makefile  Makefile.am  Makefile.in
(+3390 files in other folders)
