dnl
dnl Autoconf for NsCDE
dnl
dnl This file is a part of the NsCDE - Not so Common Desktop Environment
dnl Author: Hegel3DReloaded
dnl Licence: GPLv3
dnl

AC_INIT([NsCDE], 1.3, [nscde@protonmail.com])

AC_CONFIG_AUX_DIR(ac-aux)

AM_INIT_AUTOMAKE([foreign subdir-objects])

AC_PROG_CC

ALL_LINGUAS="hr"

AC_OUTPUT(
	Makefile
	src/Makefile
	src/colorpicker/Makefile
	src/XOverrideFontCursor/Makefile
	src/pclock/Makefile
	src/pclock/src/Makefile
	docbook/Makefile
	po/Makefile
)

